fix button spacing
the buttons were being a little wacky since I copy pasted the classes wrong

--- a/Daves Picks/Main site/master.css
+++ b/Daves Picks/Main site/master.css
@@ -153,7 +153,7 @@ padding: 1.5rem;
   padding: 8% 0 30px;
   font-size: 3rem;
   font-family: "Montserrat";
-  background-color: #1d1463;
+  background-color: #121b5c;
   color: #fff;
   display: block;
 }
